assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Roboto:wght@300&display=swap');


* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: roboto, sans-serif;
    font-weight: 400;
    color: #3a3a3a;
    min-height: 100%;
}

/* headings and logo */

.main-header {
    height: 6rem;
    background-color: #cbd18f;
}

h1, h2 {
    font-family: Quicksand, sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #3F4A3C;
}

#logo {
    float: left;
    margin-left: 25px;
    font-size: 300%;
}

/* nav links */

#menu {
    font-size: 110%;
    letter-spacing: 2px;
}

#menu, #logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 20px;
}

#menu a {
    text-decoration: none;
    color: inherit;
    padding: 4px 4px;
    border-radius: 5px;
    margin: 0 10px;
}

#menu a:hover {
    border: 10px;
    box-shadow: 0 0 20px #e3b448;
}

.active {
    border: 10px;
    box-shadow: 0 0 10px #e3b448;
}

/* hero-image and intro */

#section1 {
    width: 100%;
}

#hero-image {
    width: 50%;
    height: 500px;
    background: url('../images/Hero-image.jpeg') no-repeat left center;
    overflow: hidden;
    float: left;
    padding-top: 20px;
}

#introduction {
    width: 50%;
    height: 500px;
    float: right;
    padding-top: 20px;
}

/* text properties for home page */

.h2-home {
    line-height: 40px;
    text-align: center;
    padding: 100px 20px 50px;
}

.p-home {
    line-height: 30px;
    text-align: center;
    padding: 0 20px;
}

/* more info section */

#more-information {
    width: 50%;
    height: 500px;
    float: left;
    padding-top: 20px;
}

#boots {
    width: 50%;
    height: 500px;
    background: url('../images/football-boots-hanging.jpeg') no-repeat center center;
    overflow: hidden;
    float: left;
    padding-top: 20px;
}

.click-here {
    text-decoration: none;
    color: #3a6b35;
}

.click-here:hover {
    text-decoration: underline;
}

/* footer */

footer {
    position: relative;
    left: 0;
    bottom: 0;
    clear: both;
}

.social-networks {
    text-align: center;
    background-color: #3a6b35;
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 200%;
    margin: 1%;
    padding: 2% 8%;
    color: #e3b448;
}

/* gallery */

#photos {
    clear: both;
    line-height: 0px;
    column-count: 3;
    column-gap: 5px;
}

#photos img {
    width: 100%;
    border-radius: 5px;
    margin: 5px;
}

/* where and when layout */

#games-available {
    clear: both;
    text-align: center;
    padding: 50px 50px 50px;
}

#left-half-1, #left-half-2 {
    height: 500px;
    width: 50%;
    float: left;
    padding-top: 20px;
}

#right-half-1, #right-half-2 {
    height: 500px;
    width: 50%;
    float: right;
    padding-top: 20px;
    
}

#gmap_canvas-1, #gmap_canvas-2 {
    height: 400px;
    width: 500px;
}

#game-1 > h3 {
    text-align: center;
    text-transform: uppercase;
    padding: 10px;
}

#game-2 > h3 {
    text-align: center;
    text-transform: uppercase;
    padding: 10px;
}

/* Where and When table layout */

table {
    width: 66%;
    border-collapse: collapse;
    margin: 17%;
    background-color: #fff;
    color: #3F4A3C;
}

tr, th {
    border: 2px solid #e3b448;
    text-align: left;
    padding: 8px;
}

#heading-1, #heading-2 {
    background-color: #3F4A3C;
    color: #fff;
    text-transform: uppercase;
}

/* Contact us form */

.background-image-contact {
    background: url(../images/background-photo.jpeg) no-repeat center center;
}

#contact-form {
    margin: 0 auto;
    width: 500px;
    clear: both;
}

.form-overview > ul {
    list-style-type: none;
    padding: 15%;
}

.contact-label {
    color: #fff;
    box-sizing: border-box;
}

.contact-input{
    width: 100%;
    padding: 10px;
    font-family: roboto, sans-serif;
}

.submit-button {
    font-size: 120%;
    width: 70%;
    background-color: #3a6b35;
    color: #FFF;
    border: none;
    padding: 10px 10px;
    margin: 5% 15%;
    cursor: pointer;
}

.submit-button:hover {
    border: 10px;
    box-shadow: 0 0 20px #e3b448;
}

/* Media queries */

@media screen and (max-width: 1100px) {
    #menu {
        width: 100%;
        display: flex;
        justify-content: center;
        flex-direction: row-reverse;
    }

    #logo {
        margin-left: 0;
        width: 100%;
        display: flex;
        justify-content: center;
    }

    #section1 {
        display: flex;
        flex-direction: column-reverse;
        align-items: center;
    }

    #introduction {
        height: 200px;
        width: 80%;
        padding-bottom: 10%;
    }

    #hero-image, #more-information, #boots {
        width: 80%;
        padding: 10% 0;
    }

    #section2 {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #gmap_canvas-1, #gmap_canvas-2 {
        width: 500px;
        height: 450px;
        display: flex;
        justify-content: left;
    }

    .main-header {
        height: auto;
    }
}

@media screen and (max-width: 760px) {
    #menu {
        width: 100%;
        display: flex;
        justify-content: center;
    }

    #menu li {
        margin-right: auto;
    }

    #introduction, #more-information {
        width: 100%;
        height: fit-content;
    }

    #game-1 {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #game-2 {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #left-half-1, #left-half-2 {
        height: auto;
    }
    
    #gmap_canvas-1, #gmap_canvas-2 {
        width: 400px;
        height: 350px;
    }
}

@media screen and (max-width: 500px) {
    #logo {
        text-align: center;
    }
    
    #menu {
        text-align: center;
        line-height: 30px;
        display: flex;
        flex-direction: column-reverse;
    }

    #menu li {
        padding: 2% 0;
        width: 100%;
        height: 30px;
    }

    .social-networks {
        display: flex;
        justify-content: space-evenly;
        align-items: baseline;
    }

    #introduction, #more-information {
        width: 100%;
        height: fit-content;
    }

    #gmap_canvas-1, #gmap_canvas-2 {
        max-width: 320px;
    }

    #right-half-1, #right-half-2 {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    #left-half-1, #left-half-2 {
        height: auto;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    #photos {
        column-count: 2;
    }

    #contact-form {
        width: 100%;
    }

    .form-overview > ul {
        padding: 10% 2%;
    }

    .contact-input {
        padding: 10px 0;
    }
}

